<resources>
    <string name="app_name">"Unidos Contra a Dengue"</string>

    <string name="info_card_1"> Mantenha a caixa d\'agua sempre fechada com tampa adequada </string>
    <string name="info_card_2"> Remova folhas, galhos e tudo que possa impedir a água de correr pelas calhas </string>
    <string name="info_card_3"> Não deixe a água da chuva acumulada sobre a laje </string>
    <string name="info_card_4"> Lave semanalmente por dentro com escovas e sabão os tanques ultilizados para armazenar água </string>
    <string name="info_card_5"> Mantenha bem tampados tonéis e barris d\'agua </string>
    <string name="info_card_6"> Encha de areia até a borda os pratinhos dos vasos de planta </string>
    <string name="info_card_7"> Se você tiver vasos de plantas aquáticas, troque a água e lave o vaso principalmente por dentro com escova, água e sabão pelo menos uma vez por semana </string>
    <string name="info_card_8"> Guarde garrafas sempre de cabeça para baixo </string>
    <string name="info_card_9"> Entregue seus pneus velhos ao serviço de limpeza urbana ou guarde-os sem água em local coberto e abrigados da chuva </string>
    <string name="info_card_10"> Coloque o lixo em sacos plásticos e mantenha a lixeira bem fechada. Não jogue lixo em terrenos baldios </string>

    <string name="photo_button"> Realizar Denúncia </string>
    <string name="photo_subHeader_1">Localização atual</string>
    <string name="photo_subHeader_2">Endereço</string>
    <string name="photo_subHeader_3">Observação</string>
    <string name="photo_lat"> Latitude: </string>
    <string name="photo_lon"> Longitude: </string>

    <string name="task_dialog_title"> Deseja confirmar esta atividade ? </string>

    <string name="dialog_button_nao"> Não </string>
    <string name="dialog_button_sim"> Sim </string>
    <string name="dialog_neutral">Ok</string>
    <string name="hint_obs">Observações</string>
    <string name="gps_desligado">Sinal de GPS não encontrado !</string>
    <string name="status_gps">Certifique-se que o GPS está ligado para usar todas as funções.</string>

    <string name="photo_complaint_dialog_title"> Deseja confirmar esta atividade ? </string>
    <string name="photo_remove_dialog_title">Deseja excluir esta imagem ?</string>

    <string name="title_activity_login_activity">login_activity</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="label_password">Senha</string>
    <string name="label_email">Email</string>
    <string name="label_name">Nome (completo)</string>
    <string name="label_new_account">Criar uma nova conta</string>

    <string name="login_fail">Falha ao logar!</string>
    <string name="login_fail_msg">Email ou senha inválido, tente novamente.</string>
    <string name="easter_2">is nothing but 0</string>
    <string name="easter_1">º-º</string>

    <string name="task_card_1">Preencha todos os vasos de planta com areia.</string>
    <string name="task_card_2">Vire todas as embalagens que possam armazenar água (baldes, garrafas, etc) com a boca para baixo.</string>
    <string name="task_card_3">Verifique pneus e entulhos.</string>
    <string name="task_card_4">Verifique o lixo para possiveis fócos.</string>
    <string name="register_fail">Erro ao criar usuário!</string>
    <string name="register_fail_msg">Email incorreto ou usuário já existente</string>
    <string name="unidos_contra_a_dengue">Unidos Contra a Dengue</string>
    <string name="logo">Logo</string>
    <string name="nav_profile">Dados Cadastrais</string>
    <string name="nav_settings">Alterar Senha</string>
    <string name="nav_about">Sobre</string>
    <string name="nav_logout">Sair</string>

    <string name="msg_senhas_diferentes">Novas senhas diferentes!</string>
    <string name="msg_Erro">Erro!</string>
    <string name="msg_senha_incorreta">Senha incorreta!</string>
    <string name="label_senha_atual">Senha atual</string>
    <string name="label_senha_nova1">Nova senha</string>
    <string name="label_senha_nova2">Repita a senha</string>
    <string name="btn_alterar_senha">Alterar Senha</string>
    <string name="msg_nova_senha_igual">A nova senha não pode ser igual a senha antiga!</string>
    <string name="msg_excluido_sucesso">Usuario excluido com sucesso!</string>
    <string name="text_view_marker_title">Complaint</string>
    <string name="image_view_image_one">Imagem da Denuncia um.</string>
    <string name="image_view_image_two">Imagem da Denúncia dois</string>
    <string name="image_view_image_three">Imagem da Denúncia dois</string>
    <string name="msn_complaint_denounced">Denúncia temporariamente desabilitada.</string>
    <string name="msn_complaint_reported">REPORTADA</string>
    <string name="complaint_description">complaint description.</string>
    <string name="complaint_title">Denúncia</string>
    <string name="btn_inspect">Inspecionar</string>
    <string name="btn_report">Reportar</string>
    <string name="btn_check">Checar</string>
    <string name="msn_inpect_success">Inspecionado com sucesso!</string>
    <string name="msn_check_success">Checado com sucesso!</string>
    <string name="msn_report_success">Reportado com sucesso!</string>
    <string name="txt_empty_description">Denúncia</string>

</resources>
