<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
            android:id="@+id/complaint_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/text_view_marker_title"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/complaint_image1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:src="@drawable/ic_tab_photo_dark"
                android:contentDescription="@string/image_view_image_one"/>

        <ImageView
                android:id="@+id/complaint_image2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:src="@drawable/ic_tab_photo_dark"
                android:contentDescription="@string/image_view_image_two"/>

        <ImageView
                android:id="@+id/complaint_image3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:src="@drawable/ic_tab_photo_dark"
                android:contentDescription="@string/image_view_image_three"/>

    </LinearLayout>

</LinearLayout>