<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".views.activities.SettingsActivity">

    <ImageView
        android:id="@+id/img_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_ucd_clean"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_settings"
        android:hint="@string/label_senha_atual"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/new_pass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/old_pass"
        android:hint="@string/label_senha_nova1"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:paddingTop="35dp"/>

    <EditText
        android:id="@+id/new_pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_pass1"
        android:hint="@string/label_senha_nova2"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/new_pass2"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_alterar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_alterar_senha"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorBackground"/>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


</RelativeLayout>
