<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_acitivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".views.activities.RegisterActivity">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".views.activities.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo_register_clean" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:hint="@string/label_name"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/ck_inspector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/password"
                android:layout_below="@+id/password"
                android:text="Inspetor"
                android:textColor="@color/colorForeground" />

            <RelativeLayout
                android:id="@+id/layout_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ck_inspector"
                android:paddingTop="35dp">

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="165dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/btn"
                    android:text="@string/btn_cadastrar"
                    android:textColor="@color/cardview_light_background"
                    android:onClick="btn_register"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnSignup"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo_iftm_small"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

        </RelativeLayout>

    </FrameLayout>

    <!-- Circulo de "carregando" -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
