<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".views.activities.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorBackground"
        tools:context=".views.activities.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo_ucd_clean" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <RelativeLayout
                android:id="@+id/Conectado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true">

                <CheckBox
                    android:id="@+id/ckConectado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/labelConectado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ckConectado"
                    android:paddingTop="10dp"
                    android:text="Permanecer conectado"
                    android:textSize="11dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="165dp"
                android:layout_height="30dp"
                android:layout_below="@id/Conectado"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn"
                android:onClick="btn_entrar"
                android:text="@string/btn_entrar"
                android:textColor="@color/cardview_light_background" />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_centerHorizontal="true"
                android:paddingTop="12dp"
                android:text="@string/label_new_account"
                android:textColor="@color/colorPrimary"
                android:textSize="11dp" />

            <!-- TODO: Botão para logar com o Facebook e G+ -->

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

    </FrameLayout>


</RelativeLayout>
